fix security issue, add queryParam, update yaml file